--- a/devoluciones.html
+++ b/devoluciones.html
@@ -9,6 +9,7 @@
         // URL del script de Google Apps Script (reemplazar con tu URL)
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbweS-EM3WwYPfCBFeD2ul4e8hMfFybcJcwYo2BV11Q9czI2rOIhpeFbBtQlKKQ8MN7efg/exec";
     </script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -65,5 +66,6 @@
     
     <!-- Scripts -->
     <script src="js/googlescript.js"></script>
+    
 </body>
 </html>
