--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         // URL del script de Google Apps Script (reemplazar con tu URL)
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbweS-EM3WwYPfCBFeD2ul4e8hMfFybcJcwYo2BV11Q9czI2rOIhpeFbBtQlKKQ8MN7efg/exec";
     </script>
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -41,5 +44,6 @@
             <p>&copy; 2025 Sistema de Formularios</p>
         </footer>
     </div>
+    
 </body>
 </html>
