mejora transiciones  diseno

--- a/alquiler.html
+++ b/alquiler.html
@@ -9,7 +9,8 @@
         // URL del script de Google Apps Script (reemplazar con tu URL)
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbweS-EM3WwYPfCBFeD2ul4e8hMfFybcJcwYo2BV11Q9czI2rOIhpeFbBtQlKKQ8MN7efg/exec";
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+   <script src="js/transitions.js"></script>
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
