--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Formularios</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/transitions.js"></script>
     <script>
         // URL del script de Google Apps Script (reemplazar con tu URL)
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbweS-EM3WwYPfCBFeD2ul4e8hMfFybcJcwYo2BV11Q9czI2rOIhpeFbBtQlKKQ8MN7efg/exec";
